after removing dubli at user dashbord api